[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/player_frames_alt.tres" type="SpriteFrames" id=1]
[ext_resource path="res://game_screen/player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 6.0
height = 2.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sfx"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 1 )
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 12 )

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
